# greentic-config

./: .gitignore  CHANGELOG.md  Cargo.toml  MIGRATION_STATUS.md  SECURITY_FIX_REPORT.md  SEMVER_FIX_REPORT.md  all-code-scanning-alerts.json  codex-prompt.txt  pr-changed-files.txt  pr-comment.md  semver-output.txt
.codex/: repo_overview.md
.github/workflows/: auto-tag.yml  check-package.yml  ci.yml  codex-security-fix.yml  codex-semver-fix.yml  coverage.yml  crates-publish.yml  dev-publish.yml  publish.yml
ci/: local_check.sh
crates/greentic-config/: Cargo.toml  README.md
crates/greentic-config-types/: Cargo.toml  README.md
crates/greentic-config-types/src/: lib.rs
crates/greentic-config/src/: explain.rs  lib.rs  loaders.rs  merge.rs  paths.rs  validate.rs
scripts/: version-tools.sh
