[workspace]
members = [
    "crates/greentic-config",
    "crates/greentic-config-types",
]
resolver = "2"

[workspace.package]
version = "0.4.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/greentic/greentic-config"
description = "Greentic configuration workspace"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
thiserror = "2"
directories = "6"
camino = "1"
once_cell = "1.19"
url = "2.5"
serde_with = { version = "3", features = ["macros", "chrono"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1.0"
itertools = "0.14"
greentic-types = "0.4"
greentic-config-types = { version = "0.4", path = "crates/greentic-config-types" }
clap = "4"
tempfile = "3"
