[workspace]
members = [
    "crates/greentic-config",
    "crates/greentic-config-types",
]
resolver = "2"

[workspace.package]
version = "0.6.0-dev.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/greenticai/greentic-config"
description = "Greentic configuration workspace"

[workspace.dependencies]
serde_json = "1"
toml = "1"
thiserror = "2"
directories = "6"
camino = "1"
once_cell = "1"
anyhow = "1.0"
itertools = "0.14"
greentic-types = "0.5"
clap = "4"
tempfile = "3"
schemars = "1"

[workspace.dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[workspace.dependencies.url]
version = "2"
features = [
    "serde",
]

[workspace.dependencies.serde_with]
version = "3"
features = [
    "macros",
    "chrono",
]

[workspace.dependencies.chrono]
version = "0.4"
default-features = false
features = [
    "clock",
]

[workspace.dependencies.greentic-config-types]
version = ">=0.6.0-dev, <0.7.0-0"
path = "crates/greentic-config-types"
