[package]
name = "greentic-config-types"
version.workspace=true
edition.workspace=true
license.workspace=true
description = "Schema-only types for Greentic host configuration (no IO)"
repository = "https://github.com/greentic/greentic-config"
readme = "README.md"

[features]
schemars = ["dep:schemars"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
greentic-types = { workspace = true }
url = { workspace = true }
schemars = { version = "0.8", optional = true, features = ["url"] }

[dev-dependencies]
serde_json = { workspace = true }
toml = { workspace = true }
